--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/* Copied (and modified) from https://github.com/arcuri82/web_development_and_api_design/blob/master/exercise-solutions/quiz-game/part-09/public/style.css */
+
 @font-face {
   font-family: codystar-regular;
   src: url("../font/Codystar-regular.ttf");
